--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ pandas>=2.2.2
 tqdm>=4.66.4
 ipywidgets>=8.1.2
 
-# PyTorch (install the right CUDA build for your machine)
-torch>=2.3.0
+# ⚠️ PyTorch not listed here because pip default is CPU-only.
+# Install the correct CUDA build separately in Colab:
+#   !pip install --index-url https://download.pytorch.org/whl/cu124 torch torchvision torchaudio
